--- a/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
+++ b/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
@@ -1,5 +1,28 @@
-.center-button {
-    display: block;
-    margin: 0 auto;
-  }
+.input-field-group {
+  display: flexbox;
+  position: relative;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.input-field {
+  border: 1px solid #DBE3F5;
+  border-radius: 50px;
+  opacity: 1;
+  margin-bottom: 2vh;
+  font-size: 4vw;
+  width: 89vw;
+  padding-top: 2vh;
+  margin-left: 3vw;
+  padding: 8px 12px;
   
+}
+
+.input-field-group label {
+  position: absolute;
+  bottom: 6vh;
+  left: 8vw;
+  background-color: $color-white;
+  font-size: 3vw;
+}
+
