Verticalbar och sign up
Fixat vertical bar-partial samt signup på samma rad som <.

--- a/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
+++ b/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
@@ -26,3 +26,16 @@
   font-size: 3vw;
 }
 
+.RegHeader{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2vh;
+  margin-bottom: 4vh;
+}
+
+.RegHeader h3{
+  font-size: 18px;
+}
+
+
