--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -14,3 +14,10 @@
   border-radius: 25px;
   background-color: $color-main;
 }
+
+
+@media (min-width: 768px) {
+  .BigBlackButton {
+    width: 20vw; /* Width for desktop devices */
+  }
+}
