--- a/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
+++ b/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
@@ -1,5 +1,5 @@
 .input-field-group {
-  display: flexbox;
+  display: flex;
   position: relative;
   margin-top: auto;
   margin-bottom: auto;
@@ -9,21 +9,31 @@
   border: 1px solid #DBE3F5;
   border-radius: 50px;
   opacity: 1;
-  margin-bottom: 2vh;
-  font-size: 4vw;
+  //margin-bottom: 2vh; viewHeight skalar inte bra är man går mellan mobil och desktop.
+  margin-bottom: 15px;
+  font-size: 16px;
   width: 89vw;
-  padding-top: 2vh;
-  margin-left: 3vw;
+  margin-left: auto;
+  margin-right: auto;
+  //padding-top: 2vh;
+  padding-top: 15px;
+  //margin-left: 3vw;
   padding: 8px 12px;
   
 }
 
+
+
+
+
 .input-field-group label {
   position: absolute;
-  bottom: 6vh;
-  left: 8vw;
+  //bottom: 6vh;
+  bottom: 44px;
+  //left: 8vw;
+  left: 10% ;
   background-color: $color-white;
-  font-size: 3vw;
+  font-size: 16px;
 }
 
 .RegHeader{
@@ -42,5 +52,24 @@
 .RegHeader h3{
   font-size: 18px;
 }
+
+@media (min-width: 768px) { //Måste fixas lite mer med
+  .input-field {
+    width: 20vw; 
+  }
+  .input-field-group label {
+    left: 20%; 
+  }
+  
+}
+
+
+
+
+
+
+
+
+
 
 
