--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,7 +11,8 @@
 //Partials
 @import "./components/partials/registerpartials/registrationPartial";
 @import "./components/partials/registerpartials/socialMediaPartial";
-
+@import "./components/partials/onboardingPartials/onboardingPartial1";
+@import "./components/partials/onboardingPartials/onboardingPartial2";
 
 
 
