--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,6 +13,7 @@
 @import "./components/partials/registerpartials/socialMediaPartial";
 @import "./components/partials/onboardingPartials/onboardingPartial1";
 @import "./components/partials/onboardingPartials/onboardingPartial2";
+@import "./components/partials/pageIndicator";
 
 
 
