--- a/src/assets/scss/components/partials/onboardingPartials/_onboardingPartial1.scss
+++ b/src/assets/scss/components/partials/onboardingPartials/_onboardingPartial1.scss
@@ -25,7 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $color-bluegrey
+    background-color: $color-bluegrey;
   }
   
   .circle-2 {
