--- a/src/assets/scss/components/partials/_pageIndicator.scss
+++ b/src/assets/scss/components/partials/_pageIndicator.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1rem;
+    // margin-top: 1rem;
+    padding-bottom: 1rem;
   
     .indicator {
       background-color: black;
