Lagt till VerificationCode view
Fixade även centrering av Login view

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,6 +13,7 @@
 @import "./components/partials/registerpartials/socialMediaPartial";
 @import "./components/views/welcome";
 @import "./components/views/onboarding";
+@import "./components/views/verificationCode";
 @import "./components/partials/pageIndicator";
 
 
