--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -16,6 +16,25 @@
 }
 
 
+.backArrow {
+  position: fixed;
+  top: 2vh;
+  left: 10px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  z-index: 1000; /* backArrow alltid högst upp */
+}
+
+
+@media (max-width: 768px) {
+  .backArrow {
+      top: 2vh;
+      left: 5px;
+  }
+}
+
+
 @media (min-width: 768px) {
   .BigBlackButton {
     width: 20vw; /* Width for desktop devices */
