--- a/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
+++ b/src/assets/scss/components/partials/registerpartials/_registrationPartial.scss
@@ -1,3 +1,9 @@
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .input-field-group {
   display: flex;
   position: relative;
@@ -12,7 +18,7 @@
   //margin-bottom: 2vh; viewHeight skalar inte bra är man går mellan mobil och desktop.
   margin-bottom: 15px;
   font-size: 16px;
-  width: 89vw;
+  width: 90vw;
   margin-left: auto;
   margin-right: auto;
   //padding-top: 2vh;
@@ -38,16 +44,16 @@
 
 .RegHeader{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-top: 2vh;
   margin-bottom: 4vh;
 }
 
-.RegHeader::after{
-  content:"";
-  display: block;
-}
+// .RegHeader::after{
+//   content:"";
+//   display: block;
+// }
 
 .RegHeader h3{
   font-size: 18px;
