--- a/src/assets/scss/components/views/_verificationCode.scss
+++ b/src/assets/scss/components/views/_verificationCode.scss
@@ -1,21 +1,45 @@
-.circleOTP-container {
-    display: flex;
+.mycirclecontainer{
+  height: 100vh;
+  display: flex; // Add this line
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center; // Add this line
+}
+
+.cirleOTP-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .circleOTP {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 10px;
-    cursor: text;
-    user-select: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid #dbe3f5;
+
+  font-size: 24px;
+
+  margin-top: auto;
+  margin-bottom: 100px
+
+  
+ 
 }
 
-.circleOTP.grey {
-    background-color: grey;
-    color: white;
+.circleOTP input {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border-radius: 50%;
+  border: none;
+  background-color: transparent;
+  font-size: 24px;
 }
+
+
+.circleOTP.filled input {
+  background-color: #dbe3f5;;
+}
+
