--- a/src/assets/scss/components/_utilities.scss
+++ b/src/assets/scss/components/_utilities.scss
@@ -5,3 +5,18 @@
   color: $color-main;
   font-size: 28px;
 }
+
+.NavBarContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 53px; /* Adjust the height as needed */
+  background-color: #ffffff; /* Change the background color as desired */
+  border-top: 1px solid #dbe3f5; /* Add a border at the top if needed */
+}
+
+.NavBarContainer .icon { //Tror inte detta funkar
+  color: red;
+  font-size: 3rem; /* Adjust the icon size */
+}
