--- a/src/assets/scss/components/views/_header.scss
+++ b/src/assets/scss/components/views/_header.scss
@@ -1,30 +1,30 @@
-// Header.scss
 header {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.navbar {
-  padding: 0.5rem 1rem;
-}
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 80%;
+    max-width: 300px;
+    height: 100%;
+    background-color: #fff;
+    transition: left 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+  }
 
-.navbar-toggler {
-  border: none;
-  font-size: 24px;
-}
+  .sidebar.show {
+    left: 0;
+  }
 
-.navbar-brand {
-  margin-right: auto;
-  font-size: 24px;
-}
-
-.nav-link {
-  font-size: 24px;
-}
-
-@media (min-width: 768px) {
-  .navbar-nav {
-    display: none;
+  .navbar-toggler {
+    cursor: pointer;
   }
 }
