--- a/src/assets/scss/components/_placeholders.scss
+++ b/src/assets/scss/components/_placeholders.scss
@@ -1,3 +1,43 @@
-.Placeholder187x187{
-    
+// .Placeholder187x187,
+// .Placeholder375x170 {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   border: 1px solid black; /* Add border for better visualization, remove it if not needed */
+// }
+
+// .Placeholder187x187 {
+//   grid-row: span 1;
+//   grid-column: span 1;
+// }
+
+// .Placeholder375x170 {
+//   grid-row: span 1;
+//   grid-column: span 2;
+// }
+
+
+.Placeholder187x187 {
+
+
+
+    box-sizing: border-box;
+    opacity: 0.400;
+    width: 187px;
+    height: 187px;
+    background-color: #171c31;
+    color: white;
+    border: 1px solid magenta;
+}
+
+.Placeholder375x170 {
+
+
+    box-sizing: border-box;
+    opacity: 0.400;
+    width: 375px;
+    height: 170px;
+    background-color: #171c31;
+    color: white;
+    border: 1px solid orangered;
 }
