Fixat scrollning på sidan för kategorier
Måste fortfarande lägga till header, fixa rätt färger, och göra kategorierna selectable med ovaler.

--- a/src/assets/scss/components/views/_search.scss
+++ b/src/assets/scss/components/views/_search.scss
@@ -1,6 +1,44 @@
 .Search-Container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    // gap: 10px; /* Adjust the gap between grid items if needed */
-  }
+    display: flex;
+    flex-wrap: wrap;
+    width: 375px;
+    margin: 0 auto;
+    flex-direction: column;
+}
+
+.CategoryRowContainer {
+    display: flex;
+    flex-direction: row;
+}
+
+.CategoriesScrollable {
+    color: red;
+}
+
+.ScrollingCategories {
+    width: 375px;
+    height: 99px;
+    white-space: nowrap;
+    position: relative;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.ScrollingCategories div {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 30%;
+    background-color: wheat;
+    height: 100%;
+    margin: 0 0.25%;
+}
+
+.ScrollingCategories::-webkit-scrollbar {
+    display: none;
+}
+
+.testScroll::-webkit-scrollbar {
+    display: none;
+}
