--- a/src/assets/scss/components/_utilities.scss
+++ b/src/assets/scss/components/_utilities.scss
@@ -12,7 +12,7 @@
   align-items: center;
   width: 100%;
   height: 53px; /* Adjust the height as needed */
-  background-color: #ffffff; /* Change the background color as desired */
+  background-color: wheat; /* Change the background color as desired */
   border-top: 1px solid #dbe3f5; /* Add a border at the top if needed */
 }
 
