header med sidebar

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -19,6 +19,7 @@
 @import "./components/views/onboarding";
 @import "./components/views/verificationCode";
 @import "./components/views/search";
+@import "./components/views/header";
 
 
 
